--- a/src/style/main_style.css
+++ b/src/style/main_style.css
@@ -5,6 +5,11 @@
   margin-bottom: 0;
 }
 
+.error_message {
+  margin-left: 4px;
+  color: rgb(192, 3, 3);
+}
+
 .buttons {
   margin-top: 16px;
 }
@@ -23,6 +28,10 @@
   border-radius: 4px;
   margin-bottom: 24px;
   border: none;
+}
+
+.form-select {
+  margin-bottom: 16px;
 }
 
 .btn-outline-success {
@@ -83,6 +92,10 @@
 }
 
 .file-link {
+  background: none;
+  padding: 0;
+  text-decoration: underline;
+  border: none;
   color: black;
 }
 
@@ -95,6 +108,9 @@
 }
 
 .delete-button {
+  background: none;
+  border: none;
+  padding: 0;
   color: black;
   margin-left: 4px;
 }
@@ -108,4 +124,13 @@
   border: none;
   background: none;
   padding: 0;
+}
+
+.task {
+  margin-bottom: 24px;
+}
+
+
+.deleteBtn {
+  margin-left: '8px';
 }
